--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,22 @@
 [bdist_wheel]
 universal = 1
+
+[metadata]
+name=fetch_cite
+version=0.1.0
+description=Script to fetch citation data given DOIs
+author=Jonathan Robey
+author-email=class4kayaker@gmail.com
+license='MIT'
+
+[options]
+zip_safe=True
+include_package_data=True
+packages=find:
+install_requires=
+    click
+    requests
+
+[entry_points]
+console_scripts =
+    fetch_cite = fetch_cite.cli:fetch
